--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,23 +1,26 @@
-version: 2
+# Use the latest 2.1 version of CircleCI pipeline process engine.
+# See: https://circleci.com/docs/2.0/configuration-reference
+version: 2.1
+
+# Define a job to be invoked later in a workflow.
+# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  build:
+  say-hello:
+    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
+    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
-      - image: 7896/civ3-workspace:2.0
+      - image: cimg/base:stable
+    # Add steps to the job
+    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
       - checkout
-      - run: cp .env.example .env
- 
-      # composer cache
-      - restore_cache:
-          keys:
-            - vendor-v1-{{ checksum "composer.lock" }}
-      - run:  composer install
-      - save_cache:
-          key: vendor-v1-{{ checksum "composer.lock" }}
-          paths:
-            - vendor
+      - run:
+          name: "Say hello"
+          command: "echo Hello, World!"
 
-      # run test
-      - run: php artisan key:generate
-      - run: phpcs --standard=Framgia app
-      - run: ./vendor/bin/phpunit
+# Invoke jobs via workflows
+# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
+workflows:
+  say-hello-workflow:
+    jobs:
+      - say-hello
